test/bad/classes/inheritance03.px

class Base def
    Int x

class Sub(Base) def
    Int y

sub = Sub()
sub = Base()
